apps/opensearch/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-opensearch
  namespace: opensearch
spec:
  hosts:
  # - '*.opensearch.svc.cluster.local'
  - '*'
  gateways:
  - istio-system/istio-corus-gateway
  # - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    # - headers:
    #     cookie:
    #       regex: "^(.*?;)?(user=dev-123)(;.*)?"
    - uri:
        prefix: /monitoring/opensearch/engine/
    - uri:
        prefix: /monitoring/opensearch/engine
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 9200
        host: opensearch-cluster-master-headless.opensearch.svc.cluster.local
  - match:
    # - headers:
    #     cookie:
    #       regex: "^(.*?;)?(user=dev-123)(;.*)?"
    - uri:
        prefix: /monitoring/opensearch/dashboard/
    - uri:
        prefix: /monitoring/opensearch/dashboard
    # rewrite:
    #   uri: "/"
    route:
    - destination:
        port:
          number: 5601
        host: opensearch-dashboards.opensearch.svc.cluster.local
